fix docs add template
