# src/controllers/users.js
@@ -1,13 +1,18 @@
-import createHttpError from 'http-errors';
 import { THIRTY_DAYS } from '../constants/index.js';
 import {
   signinUser,
   logoutUser,
   refreshUsersSession,
   signupUser,
+  requestResetToken,
+  resetPassword,
+  updateUser,
+  getUsersCounter,
 } from '../services/users.js';
-import { UsersCollection } from '../db/models/user.js';
-import { saveFileToCloudinary } from '../services/fileService.js';
+import { saveFileToCloudinary } from '../utils/cloudinary.js';
+import { saveFileToUploadDir } from '../utils/saveFileToUploadDir.js';
+import { getEnvVar } from '../utils/getEnvVar.js';
+import createHttpError from 'http-errors';
 
 export const signupUserController = async (req, res) => {
   const user = await signupUser(req.body);
@@ -73,33 +78,113 @@ export const logoutUserController = async (req, res) => {
 };
 
 export const getCurrentUserController = async (req, res) => {
-  const { _id, name, email } = req.user;
+  const {
+    _id,
+    name,
+    email,
+    gender,
+    weight,
+    dailySportTime,
+    dailyNorm,
+    avatarUrl,
+  } = req.user;
 
   res.json({
     status: 200,
     message: 'Current user retrieved successfully!',
-    data: { _id, name, email },
+    data: {
+      _id,
+      name,
+      email,
+      gender,
+      weight,
+      dailySportTime,
+      dailyNorm,
+      avatarUrl,
+    },
   });
 };
-export const updateUserController = async (req, res) => {
-  const { _id } = req.user;
-  const updateData = { ...req.body };
-  if (req.file) {
-    updateData.avatarUrl = await saveFileToCloudinary(req.file.path);
-  }
 
-  const updatedUser = await UsersCollection.findByIdAndUpdate(_id, updateData, {
-    new: true,
-    runValidators: true,
-  });
-
-  if (!updatedUser) {
-    throw createHttpError(404, 'User not found');
-  }
-
+export const requestResetEmailController = async (req, res) => {
+  await requestResetToken(req.body.email);
   res.json({
     status: 200,
-    message: 'User updated successfully!',
+    message: 'Reset password email has been successfully sent.',
+    data: {},
+  });
+};
+
+export const resetPasswordController = async (req, res) => {
+  await resetPassword(req.body);
+  res.json({
+    status: 200,
+    message: 'Password has been successfully reset.',
+    data: {},
+  });
+};
+
+export const updateUserController = async (req, res, next) => {
+  const { id } = req.params;
+
+  const updatedUser = await updateUser(id, req.body, { new: true });
+
+  if (!updatedUser) {
+    return next(createHttpError(404, 'User not found or not updated'));
+  }
+
+  res.status(200).json({
+    status: 200,
+    message: 'Successfully updated user information!',
     data: updatedUser,
   });
+};
+
+export const updateUserAvatarController = async (req, res, next) => {
+  try {
+    const { id } = req.params;
+    const photo = req.file;
+
+    if (!id) {
+      return next(createHttpError(400, 'User ID is required'));
+    }
+
+    if (!photo) {
+      return next(createHttpError(400, 'No file uploaded'));
+    }
+
+    const avatarUrl =
+      getEnvVar('ENABLE_CLOUDINARY') === 'true'
+        ? await saveFileToCloudinary(photo)
+        : await saveFileToUploadDir(photo);
+
+    const updatedUser = await updateUser(id, { avatarUrl });
+
+    if (!updatedUser) {
+      return next(createHttpError(404, 'User not found or not updated'));
+    }
+
+    res.status(200).json({
+      status: 200,
+      message: 'Successfully updated user avatar!',
+      data: updatedUser,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+export const getUsersCounterController = async (req, res) => {
+  const userData = await getUsersCounter();
+  const { usersCounter, lastUsersAvatars } = userData;
+
+  const responseData = {
+    status: 200,
+    message: 'Successfully got full info about registered users!',
+    data: {
+      usersCounter: usersCounter,
+      lastUsersAvatars: lastUsersAvatars,
+    },
+  };
+
+  res.status(200).json(responseData);
 };
